# maedagua.github.io

./: .gitignore  AGENTS.md  CNAME  Gemfile  README.md  README.pt.md  _config.yml  about.md  cli.py  config.yml  config.yml.sample  index.md  pyproject.toml  setup.py
.github/workflows/: deploy.yml  deploy.yml.sample  generate-website.yml  generate-website.yml.sample  main.yml  main.yml.sample
_includes/: cayman-footer.html  cayman-header.html  footer.html
antropoceno/: index.md
assets/: extended.css
designenarrativas/: index.md
diarios/: index.md
diarios/2025-07/: index.md
diarios/2025-08/: index.md
diarios/jardinagemgeral/: index.md
diarios/julho/: index.md
direitoszonascosteiras/: index.md
divisor/: Gemfile.template  assets.py  cli.py  config.py  converter.py  deploy.py  jekyll.py  source.py
divisor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
divisor/_includes/: cayman-footer.html  cayman-header.html  footer.html  head-custom.html  header.html  navigation.html
divisor/_layouts/: default.html
divisor/assets/: extended.css  main.scss
divisor/assets/css/: style.css
docs/: index.md
eeji/: index.md
glossariodecolonial/: index.md
historico/: index.md
instrumentoscientificosabertos/: index.md
jardinagemgeral/: index.md
referencias/: index.md
repo/: index.md
repo/chicomendes/: index.md
repo/hiperguardioes/: index.md
repo/tbox/: index.md
repositoriosabertos/: index.md
tecnologiascriticas/: index.md
tests/: test_config.py  test_converter.py  test_nested_subpages.py
